svccanary.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-canary
  labels:
    helm.sh/chart: argocd-0.1.0
    app.kubernetes.io/name: argocd
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/instance: argocd
