gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
    # app: argocd # use istio default controller
    # app.kubernetes.io/instance: argocd
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "argocdtest.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-svc
spec:
  hosts:
  - "argocdtest.com"
  gateways:
  - argocd-gateway
  http:
  - route:
    - destination:
        host: argocd
        port:
          number: 3000
